adiciona scripts de Migrations

--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ POSTGRES_PORT=5432
 POSTGRES_USER=usuario_local
 POSTGRES_DB=bd_local
 POSTGRES_PASSWORD=senha_local
+DATABASE_URL=postgres://usuario_local:senha_local@localhost:5432/bd_local
